Update .env.example with additional comments and create init_db.py script for database initialization

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,22 @@
 # .env.example - Пример файла с переменными окружения
 # Скопируйте этот файл в .env и заполните своими значениями
+# ВАЖНО:
+# - НЕ заключайте значения в кавычки ("...")
+# - Если в пароле есть спецсимволы (@, :, / и т.п.) — URL-encode (percent-encode) пароль
+#   например: password "p@ss:word" -> "p%40ss%3Aword"
 
 # Telegram Bot
 BOT_TOKEN=your_bot_token_here
-CHANNEL_ID=your_channel_id_here
+CHANNEL_ID=your_channel_id_here  # обычно в формате -1001234567890
 
-# PostgreSQL
+# PostgreSQL (для SQLAlchemy + asyncpg используйте схему postgresql+asyncpg)
+# Пример (Railway):
+# DATABASE_URL=postgresql+asyncpg://postgres:your_password@postgres.railway.internal:5432/railway
 DATABASE_URL=postgresql+asyncpg://bot:password123@localhost:5432/poputchik_bot
-DB_PASSWORD=password123
 
-# Redis
+# Redis (используйте полную строку из Railway Connect, укажите /0 для брокера)
+# Пример (с авторизацией):
+# REDIS_URL=redis://default:your_redis_password@redis.railway.internal:6379/0
 REDIS_URL=redis://localhost:6379/0
 
 # OpenAI API (для проверки фото автомобилей)
